--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
 body {
   background-color: blanchedalmond;
 }
-#title {
+button {
+  background-color: burlywood;
+  border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 0px 1px 2px #888888;
+  padding: 3vmin 10vmin 3vmin 10vmin;
+  font-size: 100%;
+}
+button:hover {
+  background-color: rgb(248, 206, 151);
+}
+.title {
   display: flex;
   justify-content: center;
   width: 200px;
@@ -9,11 +20,17 @@ body {
   background-color: burlywood;
   border-radius: 10px;
 }
+#bottomSection {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
 #gameBoard {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   margin: 20px;
+  margin-bottom: 0px;
 }
 .gameSquare {
   display: flex;
@@ -33,4 +50,39 @@ body {
   display: flex;
   justify-content: center;
   font-size: 5vmin;
+}
+
+.removeDisplay {
+  display: none !important;
+}
+
+#startingPage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+#startBox {
+  min-width: 400px;
+  min-height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 4vmin;
+  height: 75vmin;
+  width: 75vmin;
+  border: 3px solid burlywood;
+  border-radius: 5px;
+  box-shadow: 0px 20px 20px #888888;
+}
+#nameBox {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+#nameSubmit {
+  padding: 5px;
 }
